--- a/app/static/style/main.css
+++ b/app/static/style/main.css
@@ -16,3 +16,10 @@ label{
 li {
     display: block !important;
 }
+
+.dropdown-menu {
+    padding: 0 !important;
+    text-align: center !important;
+    background-color: rgba(0, 0, 0, 0) !important;
+    border: 0px !important;
+}
