--- a/app/templates/newbook.html
+++ b/app/templates/newbook.html
@@ -33,7 +33,7 @@
           pattern="[a-zA-z0-9]{2,30}" title="2-30 characters" required>
         <input type="text" name="inputRelease" class="form-control mt-2" placeholder="Release"
           pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" title="1935-05-21" required>
-        <input type="name" name="inputQuantity" class="form-control mt-2" placeholder="Quantity" value="{{ nickname }}"
+        <input type="name" name="inputQuantity" class="form-control mt-2" placeholder="Quantity"
           pattern="[0-9]{1,99999}" title="" required>
         <input type="submit" class="btn btn-outline-primary btn-rounded btn-block my-4 waves-effect z-depth-0"
           value="Отправить">
